added users create and getlist api
